[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lose"
version = "0.0.1"
authors = [
  { name="loseardes77", email="loseardes77@gmail.com" },
]
description = "A small utility package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LOSEARDES77/py-lib/"
"Bug Tracker" = "https://github.com/LOSEARDES77/py-lib/issues"
